syntax = "proto3";

package lijingyuan.grpc.learning;

option java_package = "top.lijingyuan.grpc.learning.pb";
option java_multiple_files = true;

import "laptop_message.proto";
import "filter_message.proto";

message CreateLaptopRequest {
  Laptop laptop = 1;
}

message CreateLaptopResponse {
  string id = 1;
}

message SearchLaptopRequest {
  Filter filter = 1;
}

message SearchLaptopResponse {
  Laptop laptop = 1;
}

message ImageInfo {
  string laptop_id = 1;
  string img_type = 2;
}

message UploadImgRequest {
  oneof data {
    ImageInfo info = 1;
    bytes chunk_data = 2;
  }
}

message UploadImgResponse {
  string id = 1;
  uint32 size = 2;
}

message RateLaptopRequest {
  string laptop_id = 1;
  double score = 2;
}

message RateLaptopResponse {
  string laptop_id = 1;
  uint32 rated_count = 2;
  double average_score = 3;
}

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse){};

  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse){};

  rpc UploadImage(stream UploadImgRequest) returns (UploadImgResponse){};

  rpc RateLaptop(stream RateLaptopRequest) returns (stream RateLaptopResponse) {};

}